<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appname">Photo Noise</string>

    <string name="gonoise">Create New Noise</string>
    <string name="revertnoise">Revert Back Noise</string>

    <string name="welcome">Welcome To Noise</string>
    <string name="menu">Choose Actions</string>
    <string name="settings">Settings</string>
	<string name="chooseimage">Choose Image</string>
	<string name="about">About</string>
	<string name="ok">OK</string>
	<string name="folder">Folder</string>
    <string name="parentdir">Back</string>
    <string name="filesize">File Size</string>
    <string name="currentdir">Current Directory</string>
    <string name="seedtext">Your Noise Key</string>
    <string name="archtext">Noise Key</string>
    <string name="saving">Saving…</string>
    <string name="pictureloc">Picture Location</string>

    <string name="homeadds">ca-app-pub-0533085835451239/9090894383</string>
    <string name="revertadds">ca-app-pub-0533085835451239/8973143185</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
