<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/pictureloc"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/dec_lokasiGambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:inputType="textMultiLine"
        android:layout_margin="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/seedtext"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/dec_seedkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/dec_buttonDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/revertnoise" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/revertads"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/revertadds"/>
    </RelativeLayout>

</LinearLayout>
