<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/enc_pilihGambar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseimage"
        android:layout_margin="@dimen/activity_horizontal_margin" />

    <ImageView
        android:id="@+id/enc_imageRC4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.24" />

    <TextView
        android:id="@+id/enc_TXTkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/archtext"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/enc_kunciRC4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"  
        android:inputType="number"     
        android:ems="10"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/enc_buttonEnskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/gonoise"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">
    </Button>

</LinearLayout>